<resources>
    <string name="app_name">Dziennik</string>
    <string name="app_version_placeholder">wersja %1$s | %2$s</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="add_account">Dodaj konto</string>
    <string name="logout">Wyloguj się</string>
    <string name="student">Uczeń</string>
    <string name="parent">Rodzic</string>
    <string name="enter_password">Wpisz hasło</string>
    <string name="enter_username">Wpisz nazwę użytkownika</string>
    <string name="incorrect_password">Nieprawidłowe hasło</string>
    <string name="maintenance_message">Trwa przerwa techniczna, spróbuj ponownie później</string>
    <string name="server_offline_message">Błąd serwera, spróbuj ponownie później</string>
    <string name="device_offline_message">Brak połączenia</string>
    <string name="unknown_error_message">Wystąpił nieoczekiwany błąd</string>
    <string name="already_logged_in_message">Ten użytkownik jest już zalogowany</string>
    <string name="settings">Ustawienia</string>
    <string name="general">Ogólne</string>
    <string name="default_view">Domyślny widok</string>
    <string name="dark_theme">Ciemny motyw</string>
    <string name="notifications">Powiadomienia</string>
    <string name="show_notifications">Pokazuj powiadomienia</string>
    <string name="received_notifications">Otrzymywane powiadomienia</string>
    <string name="more">Więcej</string>
    <string name="about_app">O aplikacji</string>
    <string name="timetable">Plan lekcji</string>
    <string name="grades">Oceny</string>
    <string name="announcements">Ogłoszenia</string>
    <string name="absences">Nieobecności</string>
    <string name="absence_details">Szczegóły nieobecności</string>
    <string name="agenda">Terminarz</string>
    <string name="agenda_entries">Wpisy w terminarzu</string>
    <string name="lucky_numbers">Szczęśliwe numerki</string>
    <string name="log_in">Zaloguj się</string>
    <string name="using_librus">za pomocą konta Librus lub Librus Synergia</string>
    <string name="close">Zamknij</string>
    <string name="no_grades">Brak ocen</string>
    <string name="subject">Przedmiot</string>
    <string name="entry_description">Opis wpisu</string>
    <string name="description">Opis</string>
    <string name="type">Typ</string>
    <string name="date">Data</string>
    <string name="date_added">Data dodania</string>
    <string name="weight">Waga</string>
    <string name="category">Kategoria</string>
    <string name="grade">Ocena</string>
    <string name="grade_details">Szczegóły oceny</string>
    <string name="added_by">Dodano przez</string>
    <string name="date_format_full">EEEE, d MMMM yyyy</string>
    <string name="comment">Komentarz</string>
    <string name="no_lessons">Brak lekcji. ¯\\\_(ツ)_/¯</string>
    <string name="canceled">odwołane</string>
    <string name="substitution">zastępstwo</string>
    <string name="lesson_details">Szczegóły lekcji</string>
    <string name="teacher">Nauczyciel</string>
    <string name="time">Godzina</string>
    <string name="empty_lesson">Okienko</string>
    <string name="attendances">Nieobecności</string>
    <string name="no_events">Brak wpisów</string>
    <string name="no_attendances">Brak nieobecności</string>
    <string name="no_announcements">Brak ogłoszeń</string>
    <string name="timeFormat">HH:mm:ss</string>
    <string name="suggest_an_idea">Zgłoś pomysł</string>
</resources>
